tools/fixtures/should_fail/bad_argument.x3s
* Demonstrates invalid positional argument syntax
$fn = argument 1
return null
